[package]
name = "rekapp"
version = "0.1.0"
authors = ["Videntory <videntory@outlook.com>"]
description = "Twitch VoD and livestream downloader"
readme = "README.md"
keywords = ["tool", "scraper", "twitch", "download", "async"]
homepage = "https://github.com/Videntory/ReKapp"
repository = "https://github.com/Videntory/ReKapp.git"
documentation = "https://docs.rs/rekapp/"
categories = ["api-bindings"]
license = "MIT"
exclude = [".gitignore", ".cargo/config"]
edition = "2018"

[lib]
name = "rekapp"
path = "src/lib.rs"

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
regex = "1.4.2"
async-compression = { version = "0.3.6", features = ["all"] }
url = "2.2.0"
rand = "0.7.3"
serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
debug = true
