[package]
name = "twitch-apps"
version = "0.1.0"
authors = ["Videntory <videntory@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
regex = "1.4.2"
async-compression = { version = "0.3.6", features = ["all"] }
url = "2.2.0"
rand = "0.7.3"
serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
queues = "1.1.0"